# luckdraw

./: .dockerignore  .gitignore  AGENTS.md  App.tsx  Dockerfile  README.md  docker-compose.yml  index.html  metadata.json  nginx.conf  package-lock.json  package.json  types.ts
.roo/: mcp.json
backend/: pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: projects.py
backend/data/: luckydraw.db
components/: ConfigPanel.tsx  LoginScreen.tsx  ProjectDashboard.tsx  Sidebar.tsx  Workspace.tsx
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  types.ts
frontend/src/assets/: main.css
frontend/src/components/: ConfigPanel.vue  Sidebar.vue
frontend/src/router/: index.ts
frontend/src/store/: project.ts
frontend/src/views/: Dashboard.vue  Home.vue  LuckyDrawDashboard.vue  ProjectView.vue
openspec/: project.md
openspec/changes/add-docker-deployment/: proposal.md
openspec/changes/add-reset-and-tweak-ui/: design.md  proposal.md  tasks.md
openspec/changes/cleanup-react-and-use-poetry/: design.md  proposal.md  tasks.md
openspec/changes/migrate-to-fastapi-vue3/: proposal.md  tasks.md
openspec/specs/auth/: spec.md
openspec/specs/backend/: spec.md
openspec/specs/deployment/: spec.md
openspec/specs/frontend/: spec.md
openspec/specs/image-upload/: spec.md
openspec/specs/localization/: spec.md
openspec/specs/project-management/: spec.md
openspec/specs/project-structure/: spec.md
openspec/specs/ui-and-history/: spec.md
utils/: excelHelper.ts  storage.ts
(+47 files in other folders)
